# qibo-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  docs.yml  publish.yml  pytest.yml  unit_test.yml
doc/source/: conf.py  index.rst  modules.rst  qibo_client.rst  qibo_tii_provider.rst
docs/source/: conf.py  index.rst  modules.rst
docs/source/_static/css/: style.css
examples/: .gitignore  post_job_and_get_result.py  run_error_job.py  run_hardware_job.py  run_ping.py  run_successful_job.ipynb  run_successful_job.py
src/: __init__.py  qibo_tii_provider.py
src/qibo_client/: __init__.py  config.py  config_logging.py  constants.py  exceptions.py  qibo_client.py  qibo_job.py  tii.py  utils.py
src/qibo_client/exceptions/: __init__.py  errors.py  hooks.py
src/qibo_client/ui/: client_ui.py  error_renderers.py  job_frontend.py  settings.py
src/qibo_tii_provider/: .env_example  __init__.py  config.py  qibo_tii_provider.py  tii_qrc_provider.py  tiiprovider.py
src/tiiq_provider/: __init__.py  qibo_tii_provider.py
tests/: fixs.py  test_client_ui.py  test_config_logging.py  test_error_renderers.py  test_exception_hooks.py  test_qibo_client.py  test_qibo_job.py  test_qibo_job_helpers.py  test_tii.py  test_tii_qrc_provider.py  test_tiiqprovider.py  test_ui_settings.py  test_utils.py  utils_test_qibo_client.py  utils_test_tii_qrc_provider.py  utils_test_tiiqprovider.py
