# This file is part of DUNEdn by M. Rossi
[metadata]
name = tiiq_provider
version = 0.9.0
author = Qibo team
# author_email = 
description = TiiQ Provider
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Unix

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.10
install_requires =
    qibo>=0.2.2
    requests>=2.31.0


[options.packages.find]
where = src
